# miratermy

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  consts.py  main.py  parser.py  utils.py  writer.py
src/writers/: __init__.py  base.py  csv.py  google_sheets.py  utils.py
