[tool.poetry]
name = "miratermy"
version = "0.1.0"
description = ""
authors = ["stas12312 <i@svrush.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pygsheets = "^2.0.6"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
